# video-maker

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260710_0001_initial_rds_schema.py
backend/app/: __init__.py  db.py  db_models.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: settings.py
backend/app/data/: music_mixkit_manifest.json
backend/app/models/: agent.py  asset.py  catalog.py  project.py  render.py  spec.py  wedding_project.py
backend/app/services/: advisor_service.py  agent_context.py  agent_llm.py  agent_service.py  agent_store.py  agent_tool.py  asset_service.py  asset_store.py  db_store.py  demo_asset_catalog.py  eci_launcher.py  file_store.py  job_store.py  oss_keys.py  output_storage.py  project_service.py  project_store.py  render_service.py  renderer.py  spec_service.py  spec_store.py  template_service.py
backend/app/static/: index.html
backend/app/worker/: render_job.py
backend/tests/: test_agent.py  test_api.py
demo/: README.md
demo/data/: image_generation_plan.demo.json  project.demo.json  render_plan.demo.json
demo/scripts/: select_music.py  (+1 more)
docs/: music-sourcing-and-market-notes.md  wedding-video-market-and-tech-report.md
renderer/: .dockerignore  Dockerfile  pyproject.toml
scripts/: start.sh  test.sh
web/: index.html  privacy-support-de.html  privacy-support-en.html  privacy-support-ja.html  privacy-support-ko.html  privacy-support-zh.html  styles.css
(+56 files in other folders)
