[project]
name = "video-maker"
version = "0.1.0"
description = "Backend service scaffold for video generation jobs"
requires-python = ">=3.11"
dependencies = [
  "alibabacloud_eci20180808>=2.1.0",
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "pymysql>=1.1.1",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["backend*", "demo*", "ios*", "storage*"]

[tool.ruff]
line-length = 100
target-version = "py311"
